-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: openjdk7u, openjdk8u232, 11.0.5, 13.0.1
-
Component/s: client-libs
-
Environment:
JDK13.0.1b01 (64bit)/oel7.6-uek-x64/tonga-4.0.2-rc2.jar
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228390 | 14 | Philip Race | P2 | Resolved | Fixed | b19 |
| JDK-8237381 | 11.0.7 | Philip Race | P2 | Resolved | Fixed | b01 |
| JDK-8237400 | openjdk8u252 | Philip Race | P2 | Resolved | Fixed | b01 |
| JDK-8239996 | openjdk7u | Philip Race | P2 | Resolved | Fixed | master |
Testsuite name:Swing manual
Test name(s):Swing_JButton/Manual/RButtonEvent
Product(s) tested:JDK13.0.1b01 (64bit)
OS/architecture:oel7.6-uek-x64
Test tool:tonga-4.0.2-rc2.jar
Actual results:
1.The words of case description are not separated.Please refer to RButtonEvent.png.
2.No such issue with jdk13b28 on the same platform.refer to jdk13b28.png.
3.There's no issue with case function, we marked it as passed.
4.Here is the same issue with some other tests, Please refer to affectTest-18.txt
Test name(s):Swing_JButton/Manual/RButtonEvent
Product(s) tested:JDK13.0.1b01 (64bit)
OS/architecture:oel7.6-uek-x64
Test tool:tonga-4.0.2-rc2.jar
Actual results:
1.The words of case description are not separated.Please refer to RButtonEvent.png.
2.No such issue with jdk13b28 on the same platform.refer to jdk13b28.png.
3.There's no issue with case function, we marked it as passed.
4.Here is the same issue with some other tests, Please refer to affectTest-18.txt
- backported by
-
JDK-8228390 freetype seeks to index at the end of the font data
-
- Resolved
-
-
JDK-8237381 freetype seeks to index at the end of the font data
-
- Resolved
-
-
JDK-8237400 freetype seeks to index at the end of the font data
-
- Resolved
-
-
JDK-8239996 freetype seeks to index at the end of the font data
-
- Resolved
-