8227662: freetype seeks to index at the end of the font data

Reviewed-by: serb, psadhukhan